--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  
+  div.message
+    each message in messages
+      div= message.user + " " + message.text + " " + message.added
+
+  a.button(href="/new") Add new message
